[package]
name = "multivitamins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
omnipaxos_core = { git = "https://github.com/haraldng/omnipaxos"}
omnipaxos_storage = { git = "https://github.com/haraldng/omnipaxos", default-features=true }
tokio = { version = "1", features = ["full"] }
atoi = "0.3.2"
bytes = "1"
rand = "0.8.5"
futures = "0.3"
sled = "0.34.7"
commitlog = "0.2.0"
serde = "1.0.154"
